tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/rawstring-lf.stderr
TOML parse error at line 1, column 21
  |
1 | rawstring-lf = 'null'
  |                     ^
invalid literal string
